<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="app_name">niceride</string>
    <string name="send_btn">Senda</string>
    <string name="dateTxt">Dagsetning</string>
    <string name="seatsTxt">Laus sæti</string>
    <string name="fromTxt">Frá..</string>
    <string name="toTxt">Til..</string>
    <string name="costTxt">Kostnaður</string>
    <string name="timeTxt">HH:MM</string>
    <string name="add_ride_btn">Auglýsa</string>
    <string name="search_btn">Leita</string>
    <string name="nafn">Nafn</string>
    <string name="netfang">Netfang</string>
    <string name="simi">Sími</string>
    <string name="lykilord">Lykilorð</string>
    <string name="skra_inn">Innskráning</string>
    <string name="login_link">Þegar með aðgang? Skráðu þig inn!</string>
    <string name="register">Búa til aðgang</string>
    <string name="email">Netfang</string>
    <string name="pword">Lykilorð</string>
    <string name="err_msg_name">Vinsamlegast skráðu nafn</string>
    <string name="err_msg_username">Vinsamlegast veldu notandanafn</string>
    <string name="err_msg_required">Nauðsynlegt að fylla út rétt gildi</string>
    <string name="err_msg_email">Vinsamlegast skráðu gilt netfang</string>
    <string name="err_msg_password">Veldu lykilorð</string>
    <string name="err_msg_password1">Lykilorð a.m.k. 8 stafir</string>
    <string name="err_msg_phone">Vinsamlegast skráðu gilt símanúmer</string>
    <string name="bua_til_adgang">Ekki með aðgang? Búðu hann til!</string>
    <string name="notandanafn">Notandanafn</string>
    <string name="auglysa_leita">Hér getur þú auglýst farið þitt eða leitað að lausu fari</string>
    <string name="err_msg_from">Vinsamlegast veldu brottfararstað</string>
    <string name="err_msg_to">Vinsamlegast veldu áfangastað</string>
    <string name="err_msg_seats">Vinsamlegast tilgreindu fjölda lausra sæta</string>
    <string name="err_msg_cost">Vinsamlegast skráðu kostnað per farþega</string>
    <string name="err_msg_date">Vinsamlegast veldu dagsetningu</string>
    <string name="err_msg_time">Vinsamlegast skráðu gilda tímasetningu</string>
    <string name="err_msg_req">Nauðsynlegt að fylla út þennan reit</string>
    <string name="skra_inn_eda_adgang">Skráðu þig inn eða búðu til aðgang</string>
    <string name="velkomin">Velkomin/n</string>
    <string name="utskraning">Útskráning</string>
    <string name="minFor">Mín för</string>
    <string name="fyrirsognHome">Ferðast með félagsskap!</string>
    <string name="leitaAdFari">Leita að lausu fari</string>
    <string name="auglysaFar">Auglýsa farið mitt</string>
    <string name="skodaFor">Skoða förin mín</string>
    <string name="skraMigUt">Skrá mig út</string>

    <string-array name="places">
        <item>Reykjav&#237;k</item>
        <item>Keflavík</item>
        <item>Njarðvík</item>
        <item>Sandgerði</item>
        <item>Vogar</item>
        <item>Grindavík</item>
        <item>Hveragerði</item>
        <item>Mosfellsbær</item>
        <item>Kjalanes</item>
        <item>Selfoss</item>
        <item>Þorlákshöfn</item>
        <item>Stokkseyri</item>
        <item>Hella</item>
        <item>Hvolsvöllur</item>
        <item>Vík</item>
        <item>Kirkjubæjarklaustur</item>
        <item>Höfn</item>
        <item>Djúpivogur</item>
        <item>Stöðvarfjörður</item>
        <item>Breiðdalsvík</item>
        <item>Fáskrúðsfjörður</item>
        <item>Reyðarfjörður</item>
        <item>Neskaupstaður</item>
        <item>Eskifjörður</item>
        <item>Egilsstaðir</item>
        <item>Borgarfjörður Eystri</item>
        <item>Seyðisfjörður</item>
        <item>Vopnafjörður</item>
        <item>Bakkafjörður</item>
        <item>Húsavík</item>
        <item>Kópasker</item>
        <item>Dalvík</item>
        <item>Sauðárkrókur</item>
        <item>Hofsós</item>
        <item>Hvammstangi</item>
        <item>Ísafjörður</item>
        <item>Dranganes</item>
        <item>Hólmavík</item>
        <item>Bolungarvík</item>
        <item>Hólmavík</item>
        <item>Reykhólar</item>
        <item>Bíldudalur</item>
        <item>Patreksfjörður</item>
        <item>Tálknafjörður</item>
        <item>Búðardalur</item>
        <item>Ólafsvík</item>
        <item>Borgarnes</item>
        <item>Hvanneyri</item>
        <item>Flúðir</item>
        <item>Laugarvatn</item>
        <item>Vestmannaeyjar</item>
        <item>Akureyri</item>
    </string-array>
</resources>
