<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="is.hi.hopur16.nyttapp.rideActivity">

    <EditText
        android:id="@+id/fromTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/fromTxt"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/toTxt"
        app:layout_constraintEnd_toEndOf="@+id/toTxt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/toTxt"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/toTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/toTxt"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/seatsTxt"
        app:layout_constraintEnd_toEndOf="@+id/seatsTxt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/seatsTxt"
        app:layout_constraintTop_toBottomOf="@+id/fromTxt" />

    <EditText
        android:id="@+id/seatsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/seatsTxt"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/costTxt"
        app:layout_constraintEnd_toEndOf="@+id/costTxt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/costTxt"
        app:layout_constraintTop_toBottomOf="@+id/toTxt"
        app:layout_constraintVertical_bias="0.462" />

    <EditText
        android:id="@+id/costTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/costTxt"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/dateTxt"
        app:layout_constraintEnd_toEndOf="@+id/dateTxt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/dateTxt"
        app:layout_constraintTop_toBottomOf="@+id/seatsTxt" />

    <EditText
        android:id="@+id/dateTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/dateTxt"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/timeTxt"
        app:layout_constraintEnd_toEndOf="@+id/timeTxt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/timeTxt"
        app:layout_constraintTop_toBottomOf="@+id/costTxt" />

    <Button
        android:id="@+id/sendaBtn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="88dp"
        android:layout_height="0dp"
        android:text="@string/send_btn"
        app:layout_constraintBaseline_toBaselineOf="@+id/timeTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/timeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/timeTxt"
        android:inputType="time"
        app:layout_constraintBottom_toTopOf="@+id/sendaBtn"
        app:layout_constraintEnd_toEndOf="@+id/sendaBtn"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/sendaBtn"
        app:layout_constraintTop_toBottomOf="@+id/dateTxt" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

</android.support.constraint.ConstraintLayout>
